Sat Oct 13 11:55:21 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Add --with-sections option to change the default
	  value of SECTION.
	* src/man_db.conf.in: Use its output.
	* docs/NEWS: Document this.

Fri Oct 12 12:22:52 BST 2007  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Start 2.5.1.

Fri Oct 12 11:57:50 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/manconv.c (try_iconv): If we need to try the next encoding in
	  the list, make sure to do that before writing the output buffer.

Fri Oct 12 10:21:07 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (use_grep): Add trailing newline to debugging output.

Fri Oct 12 01:47:49 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/manconv.c (try_iconv): Improve debugging output slightly.

Fri Oct 12 01:43:25 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (format_display_and_save, format_display,
	  display_catman): Only discard stderr from formatting processes if
	  stdout is a terminal.

Fri Oct 12 01:32:52 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (device_table): groff's ascii device only supports
	  ASCII input, not ISO-8859-1.
	  (compatible_encodings): If the output is ASCII, this is probably
	  because the caller explicitly asked for it, so allow recoding to
	  it unconditionally.

Fri Oct 12 00:48:42 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (main): locale is a constant pointer; free
	  internal_locale instead (Debian bug #446302).

Thu Oct 11 01:40:51 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): Free format_cmd on two more early return
	  paths.

Thu Oct 11 00:53:31 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): I don't think it's possible for decomp to be
	  NULL on the display_to_stdout path, but better safe than sorry.

Thu Oct 11 00:38:56 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): Connect up the decompression pipeline in the