@@ -1,3 +1,9 @@
+Sat Oct 13 15:04:06 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* lib/popen.c, m4/man-pclose.m4: Remove; we no longer need popen or
+	  pclose.
+	* configure.ac: Remove call to MAN_FUNC_PCLOSE.
+
 Sat Oct 13 11:55:21 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* configure.ac: Add --with-sections option to change the default
